; ModuleID = '/home/carl/AnghaBench/tengine/src/event/modules/extr_ngx_eventport_module.c_ngx_eventport_done.c'
source_filename = "/home/carl/AnghaBench/tengine/src/event/modules/extr_ngx_eventport_module.c_ngx_eventport_done.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@event_timer = common dso_local global i64 0, align 8
@NGX_LOG_ALERT = common dso_local global i32 0, align 4
@ngx_errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"timer_delete() failed\00", align 1
@ep = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [26 x i8] c"close() event port failed\00", align 1
@event_list = common dso_local global i32* null, align 8
@nevents = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @ngx_eventport_done to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ngx_eventport_done(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = load i64, i64* @event_timer, align 8
  %4 = icmp ne i64 %3, -1
  br i1 %4, label %5, label %17

5:                                                ; preds = %1
  %6 = load i64, i64* @event_timer, align 8
  %7 = call i32 @timer_delete(i64 %6)
  %8 = icmp eq i32 %7, -1
  br i1 %8, label %9, label %16

9:                                                ; preds = %5
  %10 = load i32, i32* @NGX_LOG_ALERT, align 4
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @ngx_errno, align 4
  %15 = call i32 @ngx_log_error(i32 %10, i32 %13, i32 %14, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %9, %5
  store i64 -1, i64* @event_timer, align 8
  br label %17

17:                                               ; preds = %16, %1
  %18 = load i32, i32* @ep, align 4
  %19 = call i32 @close(i32 %18)
  %20 = icmp eq i32 %19, -1
  br i1 %20, label %21, label %28

21:                                               ; preds = %17
  %22 = load i32, i32* @NGX_LOG_ALERT, align 4
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @ngx_errno, align 4
  %27 = call i32 @ngx_log_error(i32 %22, i32 %25, i32 %26, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  br label %28

28:                                               ; preds = %21, %17
  store i32 -1, i32* @ep, align 4
  %29 = load i32*, i32** @event_list, align 8
  %30 = call i32 @ngx_free(i32* %29)
  store i32* null, i32** @event_list, align 8
  store i64 0, i64* @nevents, align 8
  ret void
}

declare dso_local i32 @timer_delete(i64) #1

declare dso_local i32 @ngx_log_error(i32, i32, i32, i8*) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @ngx_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
